Change routes to kebab-case
